2005-06-04  Michael Cadilhac  <michael.cadilhac@lrde.epita.fr>

	* parser.y: Update according to mono-project repository.
	* monoburg.vcproj: New. Add according to mono-project repository.

2005-05-26  Sebastien Pouliot  <sebastien@ximian.com>

        * monoburg.vcproj: Project file for monobug.

2005-01-18  Zoltan Varga  <vargaz@freemail.hu>

        * monoburg.y (yyparsetail): Handle the case when the burg file does
        not end with an empty line.

2004-11-07  Benoit Perrot <benoit@lrde.epita.fr>

	* monoburg.c (emit_header): Extract includes emission.

2004-11-07  Benoit Perrot <benoit@lrde.epita.fr>

	* monoburg.c (emit_state): Do not forward define MBState type. 
	
2004-11-07  Benoit Perrot <benoit@lrde.epita.fr>

	* monoburg.c: Do not emit debug string tables when
	`--without-debug-tables' is specified.

2004-11-07  Benoit Perrot <benoit@lrde.epita.fr>

	* monoburg.c: Support long options; prefer `--without-glib' to
	`-g'.

2004-10-13  Benoit Perrot <benoit@lrde.epita.fr>

	* TODO: New.

2004-10-13  Benoit Perrot <benoit@lrde.epita.fr>

	* monoburg.c: Emit `stdio.h' and `stdlib.h' inclusions when `-g'
	is specified to kill warnings.

2004-10-13  Benoit Perrot <benoit@lrde.epita.fr>

	* monoburg.c: Emit code to generate a file that does not need glib to 
	compile. Add `-g' option to control this emission.

2004-10-06  Benoit Perrot <benoit@lrde.epita.fr>

	* monoburg.y: Rename to...
	* parser.y: This, and let automake automaticaly invoke bison to
	create `parser.c'.
	* Makefile.am: Let autoconf add the correct extension to the
	generated binary. Distribute `sample.brg' as a test.
	* config/Makefile.am: New.
	* configure.ac: New.

2004-06-24  David Waite  <mass@akuma.org>

	* monoburg.c: change to C90-style comments from C99/C++-style
	
Wed Apr 14 12:40:54 CEST 2004 Paolo Molaro <lupus@ximian.com>

	* monoburg.c, monoburg.h, monoburg.y: changed the grammar so that
	the same emit code can be easily associated with multiple rules.